Add button, title
For user to input desired number of grid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Etch-a-Sketch</title>
 </head>
 <body>
+  <h1>Etch-a-Sketch</h1>
+  <button class="js-btn">Click Me</button>
   <div class="js-container"></div>
-
+  
 </body>
 </html>
