--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
-  <script src="/script.js" defer></script>
+  <link rel="stylesheet" href="style.css">
   <title>Etch-a-Sketch</title>
 </head>
 <body>
   <h1>Etch-a-Sketch</h1>
   <button class="js-btn">Click Me</button>
   <div class="js-container"></div>
-  
+  <script src="script.js"></script>
 </body>
 </html>
